# torematrix_labs2

./: .conflict_resolution_marker  .env.example  .github_issue_4_comment.txt  .gitignore  .taskinfo.json  00.tore  000.tore  0000.tore  00000.tore  1.tore  101010.tore  111.tore  11112.tore  1212.tore  123.tore  1a1a.tore  2.tore  2025-07-10-this-session-is-being-continued-from-a-previous-co.txt  22.tore  3.tore  33.tore  4.tore  44.tore  5.tore  55.tore  6.tore  66.tore  7.tore  77.tore  88.tore  99.tore  9999.tore  99999.tore  =13.6.0  =4.2.0  ABBYY_FINEREADER_SOLUTION.md  ACCESSIBILITY_COMPLIANCE_REPORT.md  ACTUAL_FIXES_IMPLEMENTED.md  AGENT1_PDFJS_COMPLETION.md  AGENT2_PDFJS_COMPLETION.md  (+447 more)
.claude_agents/: agent-areas-display_assignment.md  agent-highlight-sync_assignment.md  agent-multi-docs_assignment.md  agent-project-docs_assignment.md  agent-text-highlight_assignment.md  agent-ui-areas-list_assignment.md  agent-ui-areas_assignment.md  agent-ui-fix_assignment.md
.claude_memory/: CLAUDE_MEMORY.md  issue_7_ingestion_system.md  issue_8_pipeline_architecture.md
.claude_prompts/: agent-highlight-sync.txt  agent-project-docs.txt  agent-ui-areas.txt  agent-ui-fix.txt
.claude_sessions/agent-areas-display/: AGENT_INSTRUCTIONS.md  session_config.json
.claude_sessions/agent-multi-docs/: AGENT_INSTRUCTIONS.md  session_config.json  startup.sh  update_progress.sh
.claude_sessions/agent-text-highlight/: AGENT_INSTRUCTIONS.md  complete_session.sh  session_config.json  startup.sh
.claude_sessions/agent-ui-areas-list/: AGENT_INSTRUCTIONS.md  session_config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
.tore_project_selections/00/: 5555_selections.json
.tore_project_selections/000/: 5555_selections.json
.tore_project_selections/0000/: 5555_selections.json
.tore_project_selections/00000/: 5555_selections.json
.tore_project_selections/101010/: 5555_selections.json
.tore_project_selections/11112/: 5555_selections.json
.tore_project_selections/1212/: 5555_selections.json
.tore_project_selections/123/: 5555_selections.json
.tore_project_selections/1a1a/: 5555_selections.json
.tore_project_selections/44/: 5555_selections.json
.tore_project_selections/55/: 5555_selections.json
.tore_project_selections/66/: 5555_selections.json
.tore_project_selections/77/: 5555_selections.json
.tore_project_selections/88/: 5555_selections.json
.tore_project_selections/9999/: 5555_selections.json
.tore_project_selections/99999/: 5555_selections.json
.tore_selections/: 5555_selections.json
config/: cache_config.yaml
config/production/: metadata_extraction.yml
deployment/config/: prometheus.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/scripts/: start-dev.sh  start.sh
docs/: AGENT_4_INTEGRATION_SUMMARY.md  AGENT_PROMPTS.md  CACHING_AND_INCREMENTAL_PROCESSING.md  CLAUDE_INSTANCE_PROMPTS.md  COMPLETE_SYSTEM_DESIGN.md  ENHANCED_SYSTEM_DESIGN_V2.md  IMPLEMENTATION_PLAN.md  LLM_ASSISTED_PARSING_GUIDE.md  PDF_TO_LLM_GAP_ANALYSIS.md  PROCESSING_PIPELINE_GUIDE.md  QUALITY_ASSURANCE_FRAMEWORK.md  SESSION_SUMMARY.md  SESSION_SUMMARY_COMPLETE.md  TABLE_EXTRACTION_STRATEGIES.md  config_runtime_performance.md  deployment.md  highlighting_system_architecture.md  inline_editing_system.md  ui_framework_guide.md
docs/api/: NEW_COMPONENTS_API.md
docs/architecture/: event_bus.md  overview.md  storage_layer.md
docs/core/: event_bus.md
docs/multi_document/: MULTI_DOCUMENT_GUIDE.md
docs/parsers/: README.md
docs/user_guide/: property_panel_integration.md
enhanced_event_system/: __init__.py  event_types_v1.py  global_signal_processor.py  signal_bridge.py  unified_event_bus.py
enhanced_persistence/: __init__.py  auto_save_manager.py  backup_manager.py  enhanced_state_manager.py  persistence_service.py  progress_persistence.py
examples/: ui_main_window_demo.py
monitoring/: prometheus.yml
requirements/: ai.txt  base.txt  dev.txt  optional.txt
resources/pdfjs/: features.js  pdf.min.js  pdf.worker.min.js  performance.js  viewer.html  viewer.js
resources/themes/: default_dark.json  default_light.json  high_contrast_dark.json  high_contrast_light.json  professional_blue.json
scripts/: agent_coordinator.sh  git_operations.sh  github_issues.sh  health-check.py  issue_automation.sh  project_operations.sh  session_recovery.sh  setup-minio.py  setup_development.sh  setup_issue_4.sh
src/torematrix/: __init__.py  app.py
test_env/: pyvenv.cfg
tests/: run_agent2_tests.py  test_pipeline_integration.py  test_pipeline_performance.py
tests/acceptance/: ACCEPTANCE_TESTS_SUMMARY.md  README.md  quick_test.py  run_acceptance_tests.py
tests/e2e/: test_document_ingestion.py
tests/fixtures/: ingestion_fixtures.py
tests/integration/: INTEGRATION_TEST_PLAN.md  __init__.py  test_actual_implementation.py  test_agent3_verification.py  test_element_model.py  test_full_system_integration.py  test_integrated_system.py  test_pipeline_integration.py  test_pipeline_worker_integration.py  test_table_list_parsers.py  verify_issue8_complete.py  verify_issue8_criteria.py
tests/performance/: test_ingestion_performance.py
tests/ui/: __init__.py
tests/validation/: agent2_core_validation.py  agent2_interactions_validation.py
themes/: professional_dark.yaml  professional_light.yaml
tools/theme_dev/: __init__.py  performance_profiler.py  style_inspector.py  theme_watcher.py
tore_matrix_labs/: __init__.py  __main__.py  cli.py
tore_matrix_labs/config/: __init__.py  constants.py  logging_config.py  settings.py
tore_matrix_labs/core/: __init__.py  area_storage_manager.py  content_extractor.py  content_validator.py  document_analyzer.py  document_processor.py  enhanced_document_processor.py  enhanced_pdf_extractor.py  post_processor.py  (+8 more)
tore_matrix_labs_v2/: ARCHITECTURE_FLOWCHART.md  HOW_TO_RUN.md  Project_f7b7587f656b_20250710_213637.tore  READY_TO_USE.md  SYSTEM_STATUS.md  TORE_V1_VS_V2_ANALYSIS.md  VALIDATION_RESULTS.md  __init__.py  main.py  pytest.ini  run_complete_validation.py  test_document.txt  test_document_workflow.py
(+1094 files in other folders)
